# nonogram

./: CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.h  main.cpp
